Vivado/Hardware/Zybo/Zybo.sdk/.metadata/.plugins/org.eclipse.cdt.ui/Zybo_bsp_xtmrctr_intr_example_1.build.log
14:48:14 **** Incremental Build of configuration Debug for project Zybo_bsp_xtmrctr_intr_example_1 ****
make all 
'Building file: ../src/xtmrctr_intr_example.c'
'Invoking: ARM gcc compiler'
arm-xilinx-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/xtmrctr_intr_example.o" -I../../Zybo_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/xtmrctr_intr_example.d" -MT"src/xtmrctr_intr_example.d" -o "src/xtmrctr_intr_example.o" "../src/xtmrctr_intr_example.c"
../src/xtmrctr_intr_example.c: In function 'main':
../src/xtmrctr_intr_example.c:84:29: error: 'XPAR_INTC_0_TMRCTR_0_VEC_ID' undeclared (first use in this function)
 #define TMRCTR_INTERRUPT_ID XPAR_INTC_0_TMRCTR_0_VEC_ID
                             ^
../src/xtmrctr_intr_example.c:181:7: note: in expansion of macro 'TMRCTR_INTERRUPT_ID'
       TMRCTR_INTERRUPT_ID,
       ^
../src/xtmrctr_intr_example.c:84:29: note: each undeclared identifier is reported only once for each function it appears in
 #define TMRCTR_INTERRUPT_ID XPAR_INTC_0_TMRCTR_0_VEC_ID
                             ^
../src/xtmrctr_intr_example.c:181:7: note: in expansion of macro 'TMRCTR_INTERRUPT_ID'
       TMRCTR_INTERRUPT_ID,
       ^
make: *** [src/xtmrctr_intr_example.o] Fehler 1

14:48:15 Build Finished (took 260ms)

